- tell the user to "restart system" when needed (needs urpmi-5.14)
- rpmdrake:
  o add tooltips to pull down menus & to search entry

Version 4.7 - 17 March 2008, Thierry Vignaud

- consider rpm-summary-non-free when fetching package summaries
- rpmdrake:
  o split filters (all, installed, non installed) from views (GUI,
    meta packages, updates, ...)
  o update GUI package list

Version 4.6.2 - 14 March 2008, Thierry Vignaud

- write configuration before restarting after priority upgrades so
  that we don't ask questions again
- rpmdrake:
  o kill "Mandriva choices"
  o only list priority upgrades if there're
  o warn there're priority upgrades when selecting other packages (#38885)

Version 4.6.1 - 10 March 2008, Thierry Vignaud

- rpmdrake:
  o do not update media unlike MandrivaUpdate
    (regression introduced in 4.4: "remember latest view mode
    (#38138)")

Version 4.6 - 10 March 2008, Thierry Vignaud

- display in bold that priority updates require restarting
- MandrivaUpdate:
  o faster startup if there're priority updates
  o only list priority updates if existing
- rpmdrake:
  o fix listing twice updates from media tagged as update
    (regression introduced in 4.4.2)

Version 4.5 - 7 March 2008, Thierry Vignaud

- reimplement priority upgrade support through urpmi-5.9's
  infrastructure
- when restarting after priority upgrade, free memory used by previous
  rpmdrake instance

Version 4.4.2.3 - 6 March 2008, Thierry Vignaud

- MandrivaUpdate:
  o list again unselect skipped updates (minor regression in 4.4.2)

Version 4.4.2.2 - 6 March 2008, Thierry Vignaud

- fix error introduced in 4.4.2.1

Version 4.4.2.1 - 6 March 2008, Thierry Vignaud

- fix error introduced in 4.4.2

Version 4.4.2 - 6 March 2008, Thierry Vignaud

- MandrivaUpdate:
  o fix not listing all updates (#*38595)
    (regression introduced in 4.4 with 'remember state of "Show
    automatically selected packages" (#38138)'
- rpmdrake: