@@ -1,6 +1,8 @@
 - tell the user to "restart system" when needed (needs urpmi-5.14)
 - rpmdrake:
   o add tooltips to pull down menus & to search entry
+  o allow to sort packages by size (#25417)
+  o restore flat mode (#25770)
 
 Version 4.7 - 17 March 2008, Thierry Vignaud
 
